openfaas/gateway-dep.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: gateway
  namespace: openfaas
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway
    spec:
      serviceAccountName: faas-controller
      containers:
      - name: gateway
        image: openfaas/gateway:0.8.8
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 10
          timeoutSeconds: 2

        ports:
        - containerPort: 8080
          protocol: TCP

        resources:
          requests:
            memory: 250Mi
          limits:
            memory: 250Mi   # Adjust to suit needs of deployment

      - name: faas-netes
        image: openfaas/faas-netes:0.5.7
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
          protocol: TCP
