openfaas/gateway-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: openfaas
  labels:
    app: gateway
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: gateway
