openfaas/prometheus-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: openfaas
  labels:
    app: prometheus
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 9090
  selector:
    app: prometheus
