openfaas/gateway-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: openfaas
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: openfaas.localhost
    http:
      paths:
        - backend:
            serviceName: gateway
            servicePort: 80
          path: /
