openfaas/prometheus-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: openfaas
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: prometheus.openfaas.localhost
    http:
      paths:
        - backend:
            serviceName: prometheus
            servicePort: 80
          path: /
